# pasttrectools

./: LICENSE  README.md  _setup.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  tests.py
baseline/: baseline_merge.py  baseline_scan.py  calc_baselines.py  communication_test.py  draw_baseline_scan.py  dump_threshold_scan.py  pasttrec_threshold.py  pasttrec_write_and_verify.py  reset_asic.py  threshold_scan.py
pasttrec/: __init__.py  actions.py  communication.py  etrbid.py  hardware.py  interface.py  misc.py  miscellaneous.py  output_formats.py  pasttrec.py  requests.py  trb_spi.py  types.py
pasttrec/trb_comm/: file.py  libtrbnet.py  shell.py
tests/: context.py  test_pasttrec.py  test_pasttrec_communication.py  test_pasttrec_etrbid.py  test_pasttrec_hardware.py  test_pasttrec_types.py
tools/: __init__.py  asic_communication_scan.py  asic_push.py  asic_read.py  asic_reset.py  asic_scan.py  asic_set.py  asic_set_reg.py  asic_tempid.py  asic_threshold.py  baseline_calc.py  baseline_compare.py  baseline_merge.py  baseline_scan.py  calc_baselines.py  communication_scan.py  communication_test.py  compare_baselines.py  draw_baseline_scan.py  dump_threshold_scan.py  pasttrec_threshold.py  pasttrec_write_and_verify.py  read_asic.py  reset_asic.py  scalers_scan.py  spi_scan.py  threshold_scan.py  trb_communication_scan.py  trb_scan.py
