[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pasttrec"
version = "0.9.0"
dependencies = [
    "colorama",
]
authors = [
    { name = "Rafał Lalik", email = "rafal.lalik@uj.edu.pl" },
]
description = "Tools for scanning and configuring pasttrec ASICs"
readme = "README.md"
license = {text = "MIT License"}
keywords = [ "pasttrec" ]
classifiers = [
    "Private :: Do Not Upload"
]

requires-python = ">= 3.8"

[project.urls]
Homepage = "https://github.com/HADES-Cracovia/pasttrectools"
Repository = "https://github.com/HADES-Cracovia/pasttrectools"

[tool.tox]
legacy_tox_ini = """
[tox]
min_version = 4.0
env_list =
    py312
    py311
    py310
    py39
    py38
    type
"""
