[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pasttrectools"
dynamic = ["version"]
dependencies = [
    "alive-progress", "colorama", "matplotlib", "tabulate"
]
authors = [
    { name = "Rafał Lalik", email = "rafal.lalik@uj.edu.pl" },
]
description = "Tools for scanning and configuring pasttrec ASICs"
readme = "README.md"
license = {text = "MIT License"}
keywords = [ "pasttrec" ]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Quality Assurance",
]

requires-python = ">= 3.8"

[project.urls]
Homepage = "https://github.com/HADES-Cracovia/pasttrectools"
Repository = "https://github.com/HADES-Cracovia/pasttrectools"

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = True
min_version = 4.0
env_list =
    py312
    py311
    py310
    py39
    py38
    type

[testenv]
description = run unit tests
deps =
    pytest
    pytest-sugar
commands =
    pytest {posargs:tests}

[testenv:lint]
description = run linters
skip_install = true
deps =
    black
commands = black -l 120 {posargs:.}

[testenv:type]
description = run type checks
deps =
    mypy
commands =
    mypy {posargs:tools pasttrec tests}
"""
