[metadata]
name = pasttrectools
version = attr: VERSION
description = Tools for scanning and configuring pasttrec ASICs
url = https://github.com/HADES-Cracovia/pasttrectools
long_description = file: README.md, CHANGELOG, LICENSE
keywords = pasttrec
license = MIT License
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
packages =
    pasttrec
scripts =
    tools/asic_communication_scan.py
    tools/asic_push.py
    tools/asic_read.py
    tools/asic_reset.py
    tools/asic_set_reg.py
    tools/asic_threshold.py
    tools/baseline_calc.py
    tools/baseline_scan.py
    tools/baseline_merge.py
    tools/baseline_compare.py
    tools/compare_baselines.py
    tools/draw_baseline_scan.py
    tools/dump_threshold_scan.py
    tools/pasttrec_write_and_verify.py
    tools/scalers_scan.py
    tools/threshold_scan.py
    tools/trb_communication_scan.py

install_requires =
    python_version >= "3.5"
    colorama
