[options]
scripts =
    tools/asic_scan.py
    tools/asic_push.py
    tools/asic_read.py
    tools/asic_reset.py
    tools/asic_set.py
    tools/asic_tempid.py
    tools/asic_threshold.py
    tools/baseline_calc.py
    tools/baseline_scan.py
    tools/baseline_merge.py
    tools/baseline_compare.py
    tools/compare_baselines.py
    tools/draw_baseline_scan.py
    tools/dump_threshold_scan.py
    tools/pasttrec_write_and_verify.py
    tools/scalers_scan.py
    tools/spi_scan.py
    tools/threshold_scan.py
    tools/trb_scan.py
